fix: show right sidebar on tablet sizes
only hide right sidebar below 768px; it will now shown on widths 768px and above

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -13610,7 +13610,7 @@ aside.right-sidebar {
     padding: 16px 32px;
   }
 }
-@media (max-width: 1023px) {
+@media (max-width: 767px) {
   aside.right-sidebar {
     display: none;
   }
